[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 16

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
mio = { git = "https://github.com/myfreeweb/mio" }
libc = { git = "https://github.com/myfreeweb/libc", branch = "fbsd12-stat-order" }
jemallocator = { path = "/home/greg/src/github.com/alexcrichton/jemallocator" }
jemalloc-sys = { path = "/home/greg/src/github.com/alexcrichton/jemallocator/jemalloc-sys" }
servo-skia = { path = "/home/greg/src/github.com/servo/skia" }
openssl = { path = "/home/greg/src/github.com/sfackler/rust-openssl/openssl" }
openssl-sys = { path = "/home/greg/src/github.com/sfackler/rust-openssl/openssl-sys" }
libz-sys = { path = "/home/greg/src/github.com/alexcrichton/libz-sys" }
ipc-channel = { path = "/home/greg/src/github.com/servo/ipc-channel" }
[patch."https://github.com/servo/gaol"]
gaol = { path = "/home/greg/src/github.com/servo/gaol" }
[patch."https://github.com/servo/rust-azure"]
azure = { path = "/home/greg/src/github.com/servo/rust-azure" }
